--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ backcall==0.1.0
 bleach==2.1.4
 decorator==4.3.0
 defusedxml==0.5.0
+Django==2.1.1
 entrypoints==0.2.3
 html5lib==1.0.1
+image==1.5.25
 ipykernel==4.9.0
 ipython==6.5.0
 ipython-genutils==0.2.0
@@ -25,12 +27,14 @@ pandocfilters==1.4.2
 parso==0.3.1
 pexpect==4.6.0
 pickleshare==0.7.5
+Pillow==5.2.0
 prometheus-client==0.3.1
 prompt-toolkit==1.0.15
 ptyprocess==0.6.0
 Pygments==2.2.0
 PyPDF2==1.26.0
 python-dateutil==2.7.3
+pytz==2018.5
 pyzmq==17.1.2
 qtconsole==4.4.1
 Send2Trash==1.5.0
