--- a/requirements.txt
+++ b/requirements.txt
@@ -5,12 +5,14 @@ decorator==4.3.0
 defusedxml==0.5.0
 Django==2.1.1
 entrypoints==0.2.3
+et-xmlfile==1.0.1
 html5lib==1.0.1
 image==1.5.25
 ipykernel==4.9.0
 ipython==6.5.0
 ipython-genutils==0.2.0
 ipywidgets==7.4.2
+jdcal==1.4
 jedi==0.12.1
 Jinja2==2.10
 jsonschema==2.6.0
@@ -23,6 +25,7 @@ mistune==0.8.3
 nbconvert==5.4.0
 nbformat==4.4.0
 notebook==5.7.0
+openpyxl==2.5.8
 pandocfilters==1.4.2
 parso==0.3.1
 pexpect==4.6.0
